// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component  should match the snapshot 1`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
  margin-top: 8px;
  padding: 8px 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #999999;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #e0e0e0;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #ffa8a8 inset;
}

.c3 {
  pointer-events: none;
  color: #424242;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-0-label"
    aria-owns={null}
    className="c1"
    role="combobox"
  >
    
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-controls={null}
      aria-labelledby="downshift-0-label"
      autoComplete="off"
      id="downshift-0-input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      type="hidden"
      value=""
    />
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="c2"
      data-toggle={true}
      disabled={false}
      id="dropdown-0"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      Select an option
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3"
        style={
          Object {
            "color": "",
          }
        }
        theme={
          Object {
            "colors": Object {
              "error": Object {
                "100": "#ffa8a8",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
      >
        keyboard_arrow_down
      </span>
    </button>
  </div>
  
</div>
`;

exports[`Input component  should match the snapshot 2`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
  margin-top: 8px;
  padding: 8px 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #999999;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #e0e0e0;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #ffa8a8 inset;
}

.c3 {
  pointer-events: none;
  color: #424242;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-1-label"
    aria-owns={null}
    className="c1"
    role="combobox"
  >
    
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-controls={null}
      aria-labelledby="downshift-1-label"
      autoComplete="off"
      id="downshift-1-input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      type="hidden"
      value=""
    />
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="c2"
      data-toggle={true}
      disabled={false}
      id="dropdown-1"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      Dropdown placeholder
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3"
        style={
          Object {
            "color": "",
          }
        }
        theme={
          Object {
            "colors": Object {
              "error": Object {
                "100": "#ffa8a8",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
      >
        keyboard_arrow_down
      </span>
    </button>
  </div>
  
</div>
`;

exports[`Input component  should match the snapshot 3`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
  margin-top: 8px;
  padding: 8px 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  color: #999999;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #e0e0e0;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #ffa8a8 inset;
}

.c3 {
  pointer-events: none;
  color: #424242;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-2-label"
    aria-owns={null}
    className="c1"
    role="combobox"
  >
    
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-controls={null}
      aria-labelledby="downshift-2-label"
      autoComplete="off"
      id="downshift-2-input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      type="hidden"
      value=""
    />
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="c2"
      data-toggle={true}
      disabled={false}
      id="dropdown-2"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3"
        style={
          Object {
            "color": "",
          }
        }
        theme={
          Object {
            "colors": Object {
              "error": Object {
                "100": "#ffa8a8",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
      >
        keyboard_arrow_down
      </span>
    </button>
  </div>
  
</div>
`;

exports[`Input component  should match the snapshot 4`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c4 {
  color: #ac001a;
  font-size: 14px;
  cursor: text;
  font-style: italic;
  font-weight: 600;
  display: block;
  margin: 8px 12px 0;
}

.c2 {
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
  margin-top: 8px;
  padding: 8px 12px;
  border-color: #ec584e;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #999999;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #ec584e;
  box-shadow: 0px 3px 5px -1px rgba(236,88,78,0.2),0px 5px 8px 0px rgba(236,88,78,0.14),0px 1px 14px 0px rgba(236,88,78,0.12);
}

.c2[disabled] {
  background-color: #e0e0e0;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #ffa8a8 inset;
}

.c3 {
  pointer-events: none;
  color: #424242;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-3-label"
    aria-owns={null}
    className="c1"
    role="combobox"
  >
    
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-controls={null}
      aria-labelledby="downshift-3-label"
      autoComplete="off"
      id="downshift-3-input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      type="hidden"
      value=""
    />
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="c2"
      data-toggle={true}
      disabled={false}
      id="dropdown-3"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      Select an option
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3"
        style={
          Object {
            "color": "",
          }
        }
        theme={
          Object {
            "colors": Object {
              "error": Object {
                "100": "#ffa8a8",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
      >
        keyboard_arrow_down
      </span>
    </button>
  </div>
  <span
    className="c4"
  >
    Error message
  </span>
</div>
`;

exports[`Input component  should match the snapshot 5`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
  margin-top: 8px;
  padding: 8px 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #999999;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #e0e0e0;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #ffa8a8 inset;
}

.c3 {
  pointer-events: none;
  color: #424242;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-4-label"
    aria-owns={null}
    className="c1"
    role="combobox"
  >
    
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-controls={null}
      aria-labelledby="downshift-4-label"
      autoComplete="off"
      id="downshift-4-input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      type="hidden"
      value=""
    />
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="c2"
      data-toggle={true}
      disabled={true}
      id="dropdown-4"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      Select an option
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3"
        style={
          Object {
            "color": "",
          }
        }
        theme={
          Object {
            "colors": Object {
              "error": Object {
                "100": "#ffa8a8",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
      >
        keyboard_arrow_down
      </span>
    </button>
  </div>
  
</div>
`;

exports[`Input component  should match the snapshot 6`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  display: block;
  font-weight: bold;
  margin: 8px 12px 0;
}

.c3 {
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
  margin-top: 8px;
  padding: 8px 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #999999;
}

.c3::-webkit-inner-spin-button,
.c3::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c3::-webkit-calendar-picker-indicator,
.c3::-webkit-search-cancel-button {
  display: none;
}

.c3:hover,
.c3:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c3[disabled] {
  background-color: #e0e0e0;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c3:-webkit-autofill {
  box-shadow: 0 0 0 1000px #ffa8a8 inset;
}

.c4 {
  pointer-events: none;
  color: #424242;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-5-label"
    aria-owns={null}
    className="c1"
    role="combobox"
  >
    <label
      className="c2"
      disabled={false}
      htmlFor="dropdown-5"
      id="downshift-5-label"
    >
      Dropdown label
    </label>
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-controls={null}
      aria-labelledby="downshift-5-label"
      autoComplete="off"
      id="downshift-5-input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      type="hidden"
      value=""
    />
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="c3"
      data-toggle={true}
      disabled={false}
      id="dropdown-5"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      Select an option
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c4"
        style={
          Object {
            "color": "",
          }
        }
        theme={
          Object {
            "colors": Object {
              "error": Object {
                "100": "#ffa8a8",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
      >
        keyboard_arrow_down
      </span>
    </button>
  </div>
  
</div>
`;

exports[`Input component  should match the snapshot 7`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  display: block;
  font-weight: bold;
  margin: 8px 12px 0;
}

.c3 {
  color: #ec584e;
}

.c4 {
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
  margin-top: 8px;
  padding: 8px 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #999999;
}

.c4::-webkit-inner-spin-button,
.c4::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c4::-webkit-calendar-picker-indicator,
.c4::-webkit-search-cancel-button {
  display: none;
}

.c4:hover,
.c4:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c4[disabled] {
  background-color: #e0e0e0;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c4:-webkit-autofill {
  box-shadow: 0 0 0 1000px #ffa8a8 inset;
}

.c5 {
  pointer-events: none;
  color: #424242;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-6-label"
    aria-owns={null}
    className="c1"
    role="combobox"
  >
    <label
      className="c2"
      disabled={false}
      htmlFor="dropdown-6"
      id="downshift-6-label"
    >
      Dropdown label
      <em
        className="c3"
      >
        *
      </em>
    </label>
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-controls={null}
      aria-labelledby="downshift-6-label"
      autoComplete="off"
      id="downshift-6-input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      type="hidden"
      value=""
    />
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="c4"
      data-toggle={true}
      disabled={false}
      id="dropdown-6"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      Select an option
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c5"
        style={
          Object {
            "color": "",
          }
        }
        theme={
          Object {
            "colors": Object {
              "error": Object {
                "100": "#ffa8a8",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
      >
        keyboard_arrow_down
      </span>
    </button>
  </div>
  
</div>
`;

exports[`Input component  should match the snapshot 8`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
  margin-top: 8px;
  padding: 8px 12px;
  color: #999999;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #999999;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #e0e0e0;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #ffa8a8 inset;
}

.c3 {
  pointer-events: none;
  color: #424242;
  position: absolute;
  top: 12px;
  right: 14px;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-7-label"
    aria-owns={null}
    className="c1"
    role="combobox"
  >
    
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-controls={null}
      aria-labelledby="downshift-7-label"
      autoComplete="off"
      id="downshift-7-input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      type="hidden"
      value=""
    />
    <div
      className="c1"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls={null}
        aria-labelledby="downshift-7-label"
        autoComplete="off"
        className="c2"
        disabled={false}
        id="dropdown-7"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        placeholder="Select an option"
        style={
          Object {
            "cursor": "inherit",
          }
        }
        value=""
      />
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3"
        style={
          Object {
            "color": "",
          }
        }
        theme={
          Object {
            "colors": Object {
              "error": Object {
                "100": "#ffa8a8",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
      >
        keyboard_arrow_down
      </span>
    </div>
  </div>
  
</div>
`;

exports[`Input component  should match the snapshot 9`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
  margin-top: 8px;
  padding: 8px 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #999999;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #e0e0e0;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #ffa8a8 inset;
}

.c3 {
  pointer-events: none;
  color: #424242;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-8-label"
    aria-owns={null}
    className="c1"
    role="combobox"
  >
    
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-controls={null}
      aria-labelledby="downshift-8-label"
      autoComplete="off"
      id="downshift-8-input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      type="hidden"
      value=""
    />
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="c2"
      data-toggle={true}
      disabled={false}
      id="dropdown-8"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      Select an option
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3"
        style={
          Object {
            "color": "",
          }
        }
        theme={
          Object {
            "colors": Object {
              "error": Object {
                "100": "#ffa8a8",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
      >
        keyboard_arrow_down
      </span>
    </button>
  </div>
  
</div>
`;

exports[`Input component  should match the snapshot 10`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
  margin-top: 8px;
  padding: 8px 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #e0e0e0;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #ffa8a8 inset;
}

.c3 {
  pointer-events: none;
  color: #424242;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-9-label"
    aria-owns={null}
    className="c1"
    role="combobox"
  >
    
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-controls={null}
      aria-labelledby="downshift-9-label"
      autoComplete="off"
      id="downshift-9-input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      type="hidden"
      value="bazKey"
    />
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="c2"
      data-toggle={true}
      disabled={false}
      id="dropdown-9"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      baz
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3"
        style={
          Object {
            "color": "",
          }
        }
        theme={
          Object {
            "colors": Object {
              "error": Object {
                "100": "#ffa8a8",
                "300": "#f88e86",
                "500": "#ec584e",
                "700": "#e91b0c",
                "900": "#ac001a",
              },
              "neutral": Object {
                "0": "#ffffff",
                "100": "#f2f2f2",
                "1000": "#000000",
                "300": "#e0e0e0",
                "500": "#999999",
                "700": "#424242",
                "900": "#191919",
              },
              "primary": Object {
                "100": "#E5EDFC",
                "300": "#89AAE7",
                "500": "#0CC0EA",
                "700": "#1250C4",
                "900": "#002F7B",
              },
              "secondary": Object {
                "100": "#F7B0C8",
                "300": "#F278A1",
                "500": "#E91E63",
                "700": "#DE0059",
                "900": "#9E003F",
              },
              "success": Object {
                "100": "#dcedc8",
                "300": "#c9eda2",
                "500": "#7ed321",
                "700": "#3b610f",
                "900": "#004D40",
              },
              "warning": Object {
                "100": "#ffefd6",
                "300": "#ffda6a",
                "500": "#ffc107",
                "700": "#f09100",
                "900": "#d14900",
              },
            },
            "spacing": Object {
              "large": 24,
              "medium": 16,
              "small": 12,
              "xlarge": 32,
              "xsmall": 8,
              "xxlarge": 40,
              "xxsmall": 4,
              "xxxlarge": 48,
              "xxxsmall": 2,
            },
          }
        }
      >
        keyboard_arrow_down
      </span>
    </button>
  </div>
  
</div>
`;
